--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
-
 spring.thymeleaf.cache=false
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=c:\\upload
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
+
+writing.board.upload.path = c:\\upload
